day_15_argo_rollouts/manifest/chip.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chip
  labels:
    istio-injection: enabled
---
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    app: chip
  name: chip
  namespace: chip
spec:
  # Canary Release Manual
  revisionHistoryLimit: 3
  strategy:
    canary: 
      steps:
        - setWeight: 10
        - pause: {}
        - setWeight: 20
        - pause: {}
        - setWeight: 40
        - pause: {}
        - setWeight: 80
        - pause: {}
        - setWeight: 100
  replicas: 10
  selector:
    matchLabels:
      app: chip
  template:
    metadata:       
      labels:
        app: chip
        name: chip
        version: v1
    spec:
      # topologySpreadConstraints:
      # - maxSkew: 1
      #   topologyKey: "topology.kubernetes.io/zone"
      #   whenUnsatisfiable: ScheduleAnyway
      #   labelSelector:
      #     matchLabels:
      #       app: chip
          
      # nodeSelector:
      #   karpenter.sh/nodepool: "general"

      containers:
      - name: chip
        image: fidelissauro/chip:v1
        ports:
        - containerPort: 8080
          name: http
        resources:
          requests:
            cpu: 250m
            memory: 512Mi
          limits:
            cpu: 250m
            memory: 512Mi            
        startupProbe:
          failureThreshold: 10
          httpGet:
            path: /readiness
            port: 8080
          periodSeconds: 10
        livenessProbe:
          failureThreshold: 10
          httpGet:
            httpHeaders:
            - name: Custom-Header
              value: Awesome
            path: /liveness
            port: 8080
          periodSeconds: 10
      terminationGracePeriodSeconds: 60
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chip
  namespace: chip
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "chip.ralvescosta.dev" 
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chip
  namespace: chip
spec:
  hosts:
  - "chip.chip.svc.cluster.local"
  - "chip.ralvescosta.dev"
  gateways:
  - chip
  http:
  - route:
    - destination:
        host: chip
        port:
          number: 8080 
    retries:
      attempts: 3
      perTryTimeout: 10500ms
      retryOn: 5xx
---
apiVersion: v1
kind: Service
metadata:
  name: chip
  namespace: chip 
  labels:
    app.kubernetes.io/name: chip
    app.kubernetes.io/instance: chip 
spec:
  ports:
  - name: web
    port: 8080
    protocol: TCP
  selector:
    app: chip
  type: ClusterIP
---
